--- a/languages/common_travel_verbs.txt
+++ b/languages/common_travel_verbs.txt
@@ -1,34 +1,37 @@
 STATE OF THINGS OR LIVING BEINGS
-- be (e.g. I am ready, what vegetables are in this soup)
-- have (e.g. do you have vegan options, do you have chilren)
+- be [state] (e.g. I am ready, what vegetables are in this soup)
+- have [posess or contain something] (e.g. do you have chilren, do you have vegan options, the door has a lock)
 
 STATE OF LIVING BEINGS
-- live
+- live [general area of residence]
+- live [be alive]
 - sleep
 
 STATE OF THINGS
 - contain (e.g. does it contain milk)
 
 COMMUNICATION
-- speak
-- ask
-- answer
-- write
-- read
-- call [name something/someone]
-- call [request someone to appear at this location]
-- meet [get to know each other]
+- talk [exchange information using language]
+- speak [exchange information in real-time using language over voice]
+- ask [request someone to provide information] (e.g. can you ask him his name)
+- ask to [request someone to execute an action] (e.g. can you ask him to close the door)
+- answer [satisfy request for information]
+- write [record information using written language]
+- read [get information using written language]
+- call [give a name, use a name]
+- call [request someone to appear at current location]
+- meet [exchange information about each other]
 
 KNOWLEDGE & ABILITIES
-- understand
-- know
-- forget
-- think
-- learn (e.g. where did you learn your English)
-- study (e.g. where did you study)
-- can/able
+- can/able [can accomplish a certain goal]
+- think [process in the brain]
+- know [have certain information]
+- forget [lose certain information]
+- understand [have a logical model]
+- learn [develop a logical model] (e.g. where did you learn your English)
+- study [develop logical models using an educational system] (e.g. where did you study)
 
-PEOPLE'S PREFERENCES, OPINION, PERCEPTION
+PREFERENCES, OPINION, PERCEPTION
 - feel
 - want
 - need
@@ -42,13 +45,17 @@ COLLABORATION
 - help
 - recommend
 
-ACTIONS WITH THINGS & PEOPLE
-- do (e.g. can I "do" a video call here)
+GENERAL ACTIONS WITH THINGS & PEOPLE
+- do
 - make
+- use (e.g. can I use your bathroom)
+
+PHYSICAL ACTIONS WITH THINGS & PEOPLE
 - get [receive/obtain] (e.g. can I get the bill please, where can I get a spoon)
 - bring (e.g. can you bring some water please)
 - take (e.g. can I take the salad with me)
-- use (e.g. can I use your bathroom)
+
+HEAD SENSOR ACTIONS
 - look [focus eyes but not necessarily register]
 - see [register with eyes in a short or long amount of time] (e.g. did you see any waterfalls there)
 - watch [register with eyes for a long amount of time] (e.g. can I watch my movie in this room tomorrow)
@@ -70,7 +77,6 @@ POSITION
 - sit
 - stand
 - wait (e.g. please wait a moment - I want to use a translation)
-- rest
 
 COMMERCE
 - buy
@@ -84,8 +90,3 @@ COMMERCE
 FOOD
 - drink
 - eat
-
-EXTRA SOCIAL VERBS
-- play (e.g. play football)
-- grow up (e.g. did you grow up in Sao Paulo)
-- go out
