--- a/languages/common_verbs.txt
+++ b/languages/common_verbs.txt
@@ -48,12 +48,12 @@ PREFERENCES
 - want
 - like
 
-MOVEMENT WITH A GOAL
+TARGETED MOVEMENT
 - wait
 - find
 - try
 
-CONSUMPTION WITH A GOAL
+TARGETED NUTRIENT CONSUMPTION
 - drink
 - eat
 
