--- a/languages/common_verbs.txt
+++ b/languages/common_verbs.txt
@@ -1,6 +1,10 @@
-----------------------------------------------------------------
+Here I drafted a classification of top ~50 verbs roughly in the order of their relevance in the history of the universe.
+
+Examples:
+THINGS (be, go) -> LIVING BEINGS (live) -> ANIMALS (feel, eat) -> VERY INTELLIGENT ANIMALS (think, love) -> HUMANS & AI (pay, write).
+--------------------------------------------------------------------------------------------------------------------------------
 1. UNIVERSE
-----------------------------------------------------------------
+--------------------------------------------------------------------------------------------------------------------------------
 PASSIVE STATE
 - be
 
@@ -29,15 +33,15 @@ BASIC MOVEMENT
 - arrive
 - leave
 
-----------------------------------------------------------------
+--------------------------------------------------------------------------------------------------------------------------------
 2. LIVING BEINGS
-----------------------------------------------------------------
+--------------------------------------------------------------------------------------------------------------------------------
 RESIDENCE
 - live (e.g. these bacteria live in the Pacific Ocean)
 
-----------------------------------------------------------------
+--------------------------------------------------------------------------------------------------------------------------------
 3. ANIMALS
-----------------------------------------------------------------
+--------------------------------------------------------------------------------------------------------------------------------
 PERCEPTION
 - feel (e.g. insects might be able to feel pain)
 
@@ -75,9 +79,9 @@ BASIC POSITION
 - sit
 - stand
 
-----------------------------------------------------------------
+--------------------------------------------------------------------------------------------------------------------------------
 4. HIGHLY INTELLIGENT ANIMALS
-----------------------------------------------------------------
+--------------------------------------------------------------------------------------------------------------------------------
 ADVANCED INFORMATION PROCESSING
 - know [have certain information]
 - think [process in the brain]
@@ -88,9 +92,9 @@ ADVANCED INFORMATION PROCESSING
 COMPLEX FEELINGS
 - love
 
-----------------------------------------------------------------
+--------------------------------------------------------------------------------------------------------------------------------
 5. HUMANS & AI
-----------------------------------------------------------------
+--------------------------------------------------------------------------------------------------------------------------------
 BASIC COMMUNICATION
 - say [provide a short piece of information using language]
 - tell [provide a long piece of information using language]
